sampdotnethook/src/a_samp.h

// Util
PLUGIN_EXPORT void _samp_SendClientMessage(int playerid, unsigned int color, char* message);
PLUGIN_EXPORT void _samp_SendClientMessageToAll(unsigned int color, char* message);
PLUGIN_EXPORT void _samp_SendPlayerMessageToPlayer(int playerid, int senderid, char* message);
PLUGIN_EXPORT void _samp_SendPlayerMessageToAll(int senderid, char* message);
PLUGIN_EXPORT void _samp_SendDeathMessage(int killer, int killee, int weapon);
PLUGIN_EXPORT void _samp_GameTextForAll(char* string, int time, int style);
PLUGIN_EXPORT void _samp_GameTextForPlayer(int playerid, char* string, int time, int style);
PLUGIN_EXPORT int  _samp_GetTickCount();
PLUGIN_EXPORT int  _samp_GetMaxPlayers();
// Game
PLUGIN_EXPORT void _samp_SetGameModeText(char* string);
PLUGIN_EXPORT void _samp_SetTeamCount(int count); // No effect
PLUGIN_EXPORT int  _samp_AddPlayerClass(int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, int weapon1, int weapon1_ammo, int weapon2, int weapon2_ammo, int weapon3, int weapon3_ammo);
PLUGIN_EXPORT int  _samp_AddPlayerClassEx(int teamid, int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, int weapon1, int weapon1_ammo, int weapon2, int weapon2_ammo, int weapon3, int weapon3_ammo);
PLUGIN_EXPORT int  _samp_AddStaticVehicle(int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, int color1, int color2rt);
PLUGIN_EXPORT int  _samp_AddStaticVehicleEx(int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, int color1, int color2, int respawn_delay);
PLUGIN_EXPORT int  _samp_AddStaticPickup(int model, int type, float x, float y, float z, int virtualworld=0);
PLUGIN_EXPORT int  _samp_CreatePickup(int model, int type, float x, float y, float z, int virtualworld=0);
PLUGIN_EXPORT void _samp_DestroyPickup(int pickup);
PLUGIN_EXPORT void _samp_ShowNameTags(int show);
PLUGIN_EXPORT void _samp_ShowPlayerMarkers(int mode);
PLUGIN_EXPORT void _samp_GameModeExit();
PLUGIN_EXPORT void _samp_SetWorldTime(int hour);
PLUGIN_EXPORT void _samp_GetWeaponName(int weaponid, char* weapon, int len);
PLUGIN_EXPORT void _samp_EnableTirePopping(int enable); // Deprecated
PLUGIN_EXPORT void _samp_AllowInteriorWeapons(int allow);
PLUGIN_EXPORT void _samp_SetWeather(int weatherid);
PLUGIN_EXPORT void _samp_SetGravity(float gravity);
PLUGIN_EXPORT void _samp_AllowAdminTeleport(int allow); // Deprecated
PLUGIN_EXPORT void _samp_SetDeathDropAmount(int amount); // Deprecated
PLUGIN_EXPORT void _samp_CreateExplosion(float x, float y, float z, int type, float radius);
PLUGIN_EXPORT void _samp_EnableZoneNames(int enable);
PLUGIN_EXPORT void _samp_UsePlayerPedAnims();
PLUGIN_EXPORT void _samp_DisableInteriorEnterExits();
PLUGIN_EXPORT void _samp_SetNameTagDrawDistance(float distance);
PLUGIN_EXPORT void _samp_DisableNameTagLOS();
PLUGIN_EXPORT void _samp_LimitGlobalChatRadius(float chat_radius);
PLUGIN_EXPORT void _samp_LimitPlayerMarkerRadius(float marker_radius);
// Npc
PLUGIN_EXPORT void _samp_ConnectNPC(char* name, char* script);
PLUGIN_EXPORT int  _samp_IsPlayerNPC(int playerid);
// Admin
PLUGIN_EXPORT int  _samp_IsPlayerAdmin(int playerid);
PLUGIN_EXPORT void _samp_Kick(int playerid);
PLUGIN_EXPORT void _samp_Ban(int playerid);
PLUGIN_EXPORT void _samp_BanEx(int playerid, char* reason);
PLUGIN_EXPORT void _samp_SendRconCommand(char* command);
PLUGIN_EXPORT void _samp_GetServerVarAsString(char* varname, char* buffer, int len);
PLUGIN_EXPORT int  _samp_GetServerVarAsInt(char* varname);
PLUGIN_EXPORT int  _samp_GetServerVarAsBool(char* varname);
PLUGIN_EXPORT void _samp_GetPlayerNetworkStats(int playerid, char* retstr, int retstr_size);
PLUGIN_EXPORT void _samp_GetNetworkStats(char* retstr, int retstr_size);
PLUGIN_EXPORT int  _samp_GetPlayerVersion(int playerid, char* version, int len);
// Menu
PLUGIN_EXPORT int  _samp_CreateMenu(char* title, int columns, float x, float y, float col1width, float col2width=0.0);
PLUGIN_EXPORT int  _samp_DestroyMenu(int menuid);
PLUGIN_EXPORT void _samp_AddMenuItem(int menuid, int column, char* menutext);
PLUGIN_EXPORT void _samp_SetMenuColumnHeader(int menuid, int column, char* columnheader);
PLUGIN_EXPORT void _samp_ShowMenuForPlayer(int menuid, int playerid);
PLUGIN_EXPORT void _samp_HideMenuForPlayer(int menuid, int playerid);
PLUGIN_EXPORT int  _samp_IsValidMenu(int menuid);
PLUGIN_EXPORT void _samp_DisableMenu(int menuid);
PLUGIN_EXPORT void _samp_DisableMenuRow(int menuid, int row);
PLUGIN_EXPORT int  _samp_GetPlayerMenu(int playerid);
// Text Draw
PLUGIN_EXPORT int  _samp_TextDrawCreate(float x, float y, char* text);
PLUGIN_EXPORT void _samp_TextDrawDestroy(int text);
PLUGIN_EXPORT void _samp_TextDrawLetterSize(int text, float x, float y);
PLUGIN_EXPORT void _samp_TextDrawTextSize(int text, float x, float y);
PLUGIN_EXPORT void _samp_TextDrawAlignment(int text, int alignment);
PLUGIN_EXPORT void _samp_TextDrawColor(int text, unsigned int color);
PLUGIN_EXPORT void _samp_TextDrawUseBox(int text, int use);
PLUGIN_EXPORT void _samp_TextDrawBoxColor(int text, int color);
PLUGIN_EXPORT void _samp_TextDrawSetShadow(int text, int size);
PLUGIN_EXPORT void _samp_TextDrawSetOutline(int text, int size);
PLUGIN_EXPORT void _samp_TextDrawBackgroundColor(int text, unsigned int color);
PLUGIN_EXPORT void _samp_TextDrawFont(int text, int font);
PLUGIN_EXPORT void _samp_TextDrawSetProportional(int text, int set);
PLUGIN_EXPORT void _samp_TextDrawSetSelectable(int text, int set);
PLUGIN_EXPORT void _samp_TextDrawShowForPlayer(int playerid, int text);
PLUGIN_EXPORT void _samp_TextDrawHideForPlayer(int playerid, int text);
PLUGIN_EXPORT void _samp_TextDrawShowForAll(int text);
PLUGIN_EXPORT void _samp_TextDrawHideForAll(int text);
PLUGIN_EXPORT void _samp_TextDrawSetString(int text, char* string);