sampdotnet/Core/Natives.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace SAMP.Core {
	internal class Natives {
		[DllImport("__Internal", EntryPoint="_samp_logprintf")]
		public static extern void logprintf(string message);
		
		// a_samp.inc
		#region a_samp.inc
		
		// Util
		[DllImport("__Internal", EntryPoint="_samp_SendClientMessage")]
		public static extern void SendClientMessage(int playerid, uint color, string message);
		[DllImport("__Internal", EntryPoint="_samp_SendClientMessageToAll")]
		public static extern void SendClientMessageToAll(uint color, string message);
		[DllImport("__Internal", EntryPoint="_samp_SendPlayerMessageToPlayer")]
		public static extern void SendPlayerMessageToPlayer(int playerid, int senderid, string message);
		[DllImport("__Internal", EntryPoint="_samp_SendPlayerMessageToAll")]
		public static extern void SendPlayerMessageToAll(int senderid, string message);
		[DllImport("__Internal", EntryPoint="_samp_SendDeathMessage")]
		public static extern void SendDeathMessage(int killer, int killee, int weapon);
		[DllImport("__Internal", EntryPoint="_samp_GameTextForAll")]
		public static extern void GameTextForAll(string str, int time, int style);
		[DllImport("__Internal", EntryPoint="_samp_GameTextForPlayer")]
		public static extern void GameTextForPlayer(int playerid, string str, int time, int style);
		[DllImport("__Internal", EntryPoint="_samp_GetTickCount")]
		public static extern int GetTickCount();
		[DllImport("__Internal", EntryPoint="_samp_GetMaxPlayers")]
		public static extern int GetMaxPlayers();
		
		// Game
		[DllImport("__Internal", EntryPoint="_samp_SetGameModeText")]
		public static extern void SetGameModeText(string str);
		[DllImport("__Internal", EntryPoint="_samp_SetTeamCount")]
		public static extern void SetTeamCount(int count); // No effect
		[DllImport("__Internal", EntryPoint="_samp_AddPlayerClass")]
		public static extern int AddPlayerClass(int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, int weapon1, int weapon1_ammo, int weapon2, int weapon2_ammo, int weapon3, int weapon3_ammo);
		[DllImport("__Internal", EntryPoint="_samp_AddPlayerClassEx")]
		public static extern int AddPlayerClassEx(int teamid, int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, int weapon1, int weapon1_ammo, int weapon2, int weapon2_ammo, int weapon3, int weapon3_ammo);
		[DllImport("__Internal", EntryPoint="_samp_AddStaticVehicle")]
		public static extern int AddStaticVehicle(int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, uint color1, uint color2);
		[DllImport("__Internal", EntryPoint="_samp_AddStaticVehicleEx")]
		public static extern int AddStaticVehicleEx(int modelid, float spawn_x, float spawn_y, float spawn_z, float z_angle, uint color1, uint color2, int respawn_delay);
		[DllImport("__Internal", EntryPoint="_samp_AddStaticPickup")]
		public static extern int AddStaticPickup(int model, int type, float x, float y, float z, int virtualworld=0);
		[DllImport("__Internal", EntryPoint="_samp_CreatePickup")]
		public static extern int CreatePickup(int model, int type, float x, float y, float z, int virtualworld=0);
		[DllImport("__Internal", EntryPoint="_samp_DestroyPickup")]
		public static extern void DestroyPickup(int pickup);
		[DllImport("__Internal", EntryPoint="_samp_ShowNameTags")]
		public static extern void ShowNameTags(int show);
		[DllImport("__Internal", EntryPoint="_samp_ShowPlayerMarkers")]
		public static extern void ShowPlayerMarkers(int mode);
		[DllImport("__Internal", EntryPoint="_samp_GameModeExit")]
		public static extern void GameModeExit();
		[DllImport("__Internal", EntryPoint="_samp_SetWorldTime")]
		public static extern void SetWorldTime(int hour);
		[DllImport("__Internal", EntryPoint="_samp_GetWeaponName")]
		public static extern void GetWeaponName(int weaponid, StringBuilder weapon, int len);
		[Obsolete("This function was removed in SA-MP 0.3. Tire popping is enabled by default.", false)]
		[DllImport("__Internal", EntryPoint="_samp_EnableTirePopping")]
		public static extern void EnableTirePopping(int enable); // Deprecated
		[DllImport("__Internal", EntryPoint="_samp_AllowInteriorWeapons")]
		public static extern void AllowInteriorWeapons(int allow);
		[DllImport("__Internal", EntryPoint="_samp_SetWeather")]
		public static extern void SetWeather(int weatherid);
		[DllImport("__Internal", EntryPoint="_samp_SetGravity")]
		public static extern void SetGravity(float gravity);
		[Obsolete("This function is deprecated. Please see the SAMP.API.Player.OnClickMap event.", true)]
		[DllImport("__Internal", EntryPoint="_samp_AllowAdminTeleport")]
		public static extern void AllowAdminTeleport(int allow); // Deprecated
		[Obsolete("This function is deprecated.", true)]
		[DllImport("__Internal", EntryPoint="_samp_SetDeathDropAmount")]
		public static extern void SetDeathDropAmount(int amount); // Deprecated
		[DllImport("__Internal", EntryPoint="_samp_CreateExplosion")]
		public static extern int CreateExplosion(float x, float y, float z, int type, float radius);
		[DllImport("__Internal", EntryPoint="_samp_EnableZoneNames")]
		public static extern void EnableZoneNames(int enable);
		[DllImport("__Internal", EntryPoint="_samp_UsePlayerPedAnims")]
		public static extern void UsePlayerPedAnims();
		[DllImport("__Internal", EntryPoint="_samp_DisableInteriorEnterExits")]
		public static extern void DisableInteriorEnterExits();
		[DllImport("__Internal", EntryPoint="_samp_SetNameTagDrawDistance")]
		public static extern void SetNameTagDrawDistance(float distance);
		[DllImport("__Internal", EntryPoint="_samp_DisableNameTagLOS")]
		public static extern void DisableNameTagLOS();
		[DllImport("__Internal", EntryPoint="_samp_LimitGlobalChatRadius")]
		public static extern void LimitGlobalChatRadius(float chat_radius);
		[DllImport("__Internal", EntryPoint="_samp_LimitPlayerMarkerRadius")]
		public static extern void LimitPlayerMarkerRadius(float marker_radius);
		
		// Npc
		// These functions are not yet implemented into the SAMP.NET library
		[DllImport("__Internal", EntryPoint="_samp_ConnectNPC")]
		public static extern void ConnectNPC(string name, string script);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerNPC")]
		public static extern int IsPlayerNPC(int playerid);
		
		// Admin
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerAdmin")]
		public static extern int IsPlayerAdmin(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_Kick")]
		public static extern void Kick(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_Ban")]
		public static extern void Ban(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_BanEx")]
		public static extern void BanEx(int playerid, string reason);
		[DllImport("__Internal", EntryPoint="_samp_SendRconCommand")]
		public static extern void SendRconCommand(string command);
		[DllImport("__Internal", EntryPoint="_samp_GetServerVarAsString")]
		public static extern void GetServerVarAsString(string varname, StringBuilder buffer, int len);
		[DllImport("__Internal", EntryPoint="_samp_GetServerVarAsInt")]
		public static extern int GetServerVarAsInt(string varname);
		[DllImport("__Internal", EntryPoint="_samp_GetServerVarAsBool")]
		public static extern int GetServerVarAsBool(string varname);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerNetworkStats")]
		public static extern void GetPlayerNetworkStats(int playerid, StringBuilder retstr, int retstr_size);
		[DllImport("__Internal", EntryPoint="_samp_GetNetworkStats")]
		public static extern void GetNetworkStats(StringBuilder retstr, int retstr_size);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerVersion")]
		public static extern int GetPlayerVersion(int playerid, StringBuilder version, int len);
		
		// Menu
		[DllImport("__Internal", EntryPoint="_samp_CreateMenu")]
		public static extern int CreateMenu(string title, int columns, float x, float y, float col1width, float col2width=0.0f);
		[DllImport("__Internal", EntryPoint="_samp_DestroyMenu")]
		public static extern int DestroyMenu(int menuid);
		[DllImport("__Internal", EntryPoint="_samp_AddMenuItem")]
		public static extern void AddMenuItem(int menuid, int column, string menutext);
		[DllImport("__Internal", EntryPoint="_samp_SetMenuColumnHeader")]
		public static extern void SetMenuColumnHeader(int menuid, int column, string columnheader);
		[DllImport("__Internal", EntryPoint="_samp_ShowMenuForPlayer")]
		public static extern void ShowMenuForPlayer(int menuid, int playerid);
		[DllImport("__Internal", EntryPoint="_samp_HideMenuForPlayer")]
		public static extern void HideMenuForPlayer(int menuid, int playerid);
		[DllImport("__Internal", EntryPoint="_samp_IsValidMenu")]
		public static extern int IsValidMenu(int menuid);
		[DllImport("__Internal", EntryPoint="_samp_DisableMenu")]
		public static extern void DisableMenu(int menuid);
		[DllImport("__Internal", EntryPoint="_samp_DisableMenuRow")]
		public static extern void DisableMenuRow(int menuid, int row);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerMenu")]
		public static extern int GetPlayerMenu(int playerid);
		
		// Text Draw
		[DllImport("__Internal", EntryPoint="_samp_TextDrawCreate")]
		public static extern int TextDrawCreate(float x, float y, string text);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawDestroy")]
		public static extern void TextDrawDestroy(int text);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawLetterSize")]
		public static extern void TextDrawLetterSize(int text, float x, float y);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawTextSize")]
		public static extern void TextDrawTextSize(int text, float x, float y);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawAlignment")]
		public static extern void TextDrawAlignment(int text, int alignment);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawColor")]
		public static extern void TextDrawColor(int text, uint color);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawUseBox")]
		public static extern void TextDrawUseBox(int text, int use);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawBoxColor")]
		public static extern void TextDrawBoxColor(int text, uint color);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawSetShadow")]
		public static extern void TextDrawSetShadow(int text, int size);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawSetOutline")]
		public static extern void TextDrawSetOutline(int text, int size);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawBackgroundColor")]
		public static extern void TextDrawBackgroundColor(int text, uint color);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawFont")]
		public static extern void TextDrawFont(int text, int font);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawSetProportional")]
		public static extern void TextDrawSetProportional(int text, int set);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawSetSelectable")]
		public static extern void TextDrawSetSelectable(int text, int set);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawShowForPlayer")]
		public static extern void TextDrawShowForPlayer(int playerid, int text);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawHideForPlayer")]
		public static extern void TextDrawHideForPlayer(int playerid, int text);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawShowForAll")]
		public static extern void TextDrawShowForAll(int text);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawHideForAll")]
		public static extern void TextDrawHideForAll(int text);
		[DllImport("__Internal", EntryPoint="_samp_TextDrawSetString")]
		public static extern void TextDrawSetString(int text, string str);
